changes based on review comments
Signed-off-by: Arun Venmany <Arun.Kumar.V.N@ibm.com>